--- a/portal/portal/templates/contactos.html
+++ b/portal/portal/templates/contactos.html
@@ -16,7 +16,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     {%if contacto.usuario2.imagen %}
-                        <span class="input-group-addon"><img src="{{contacto.usuario2.imagen.url}}" alt="" ></span>
+                        <span class="input-group-addon"><img src="{{contacto.usuario2.imagen}}" alt="" ></span>
                     {% endif %}
                     <a href="/chat?open_chat={{contacto.usuario2.pk}}">{{contacto.usuario2.usuario}}</a>
                 </div>
