--- a/portal/portal/templates/peticionPrivado.html
+++ b/portal/portal/templates/peticionPrivado.html
@@ -40,7 +40,8 @@
                     {% else %}
                     <div class="col-xs-12">
                     Para aceptar al usuario como contacto debe estar logueado.<br>
-                    <a href="login" class="btn btn-sm btn-primary"></i> Login</a>
+                    <a href="login" class="btn btn-sm btn-primary"></i> Login</a></br>
+                    <a href="registro" class="btn btn-sm btn-primary"></i> Registro</a>
                     </div>
                     {% endif %}
 
