Sistema login con token en chat

--- a/portal/portal/templates/base.html
+++ b/portal/portal/templates/base.html
@@ -86,11 +86,11 @@
 <script>
         $(document).ready(function() {
             //ReadyChat.init();
-            //loginChat('{{usuario.usuario}}', '{{usuario.chatToken}}', '{{usuario.imagen}}');
+            loginChat('{{usuario.usuario}}', '{{usuario.chatToken}}', '{{usuario.imagen}}',{{open_chat}});
 
 
 
-            loginChat('{{usuario.usuario}}', '{{usuario.password}}', '{{usuario.imagen}}',{{open_chat}});
+            //loginChat('{{usuario.usuario}}', '{{usuario.password}}', '{{usuario.imagen}}',{{open_chat}});
         });
 
 
