Cambios de movil solo en españa

--- a/portal/portal/templates/index.html
+++ b/portal/portal/templates/index.html
@@ -11,7 +11,7 @@
                     </div>
                     <div id="faq1_q1" class="panel-collapse collapse in">
                         <div class="panel-body">
-                            <p>Ziip es una plataforma de comunicación, que permite a los usuarios contactar anónimamente por SMS o email, manteniendo la privacidad.
+                            <p>Ziip es una plataforma de comunicación, que permite a los usuarios contactar anónimamente por SMS (solo en España, actualmente) o email, manteniendo la privacidad.
                                 TOTALMENTE GRATUITA.</p>
                             </div>
                         </div>
@@ -24,7 +24,7 @@
                             <div class="panel-body">
                                 <p>No existe una aplicación similar, “el primer paso” en el inicio de una relación es muy complicado, especialmente en entornos laborales o familiares.
                                     Permitimos a los usuarios que se comuniquen sin comprometer su privacidad, sin el uso de Facebook o cualquier red social.
-                                    Ziip es una herramienta para el primer contacto, a partir de el envío de un SMS o email (gratuito) abrimos un chat para permitir la comunicación privada.
+                                    Ziip es una herramienta para el primer contacto, a partir de el envío de un SMS (solo en España, actualmente)  o email (gratuito) abrimos un chat para permitir la comunicación privada.
                                 </p>
                             </div>
                         </div>
@@ -38,7 +38,7 @@
                         <div id="faq1_q3" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <p>
-                                    Un usuario de la plataforma, introduce un contacto (email o número de móvil), selecciona un mensaje genérico y uno personal. El genérico se enviará por SMS o email, junto con un link para ver el personal.
+                                    Un usuario de la plataforma, introduce un contacto (email o número de móvil), selecciona un mensaje genérico y uno personal. El genérico se enviará por SMS (solo en España, actualmente) o email, junto con un link para ver el personal.
                                 </p>
                             </div>
                         </div>
