--- a/portal/portal/templates/nuevaPeticion.html
+++ b/portal/portal/templates/nuevaPeticion.html
@@ -90,7 +90,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon">Telefono:</span>
-                    <input type="text"  name="telefono" class="form-control input-lg" placeholder="..." value="{{datos.telefono}}">
+                    <input type="text"  name="telefono" class="form-control input-lg" placeholder="...(Solo España)" value="{{datos.telefono}}">
                 </div>
             </div>
         </div>
@@ -116,7 +116,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon">Telefono:</span>
-                    <input type="text"  name="telefono2" class="form-control input-lg" placeholder="..." value="{{datos.telefono2}}">
+                    <input type="text"  name="telefono2" class="form-control input-lg" placeholder="...(Solo España)" value="{{datos.telefono2}}">
                 </div>
             </div>
         </div>
