--- a/portal/portal/templates/mails/conecta.html
+++ b/portal/portal/templates/mails/conecta.html
@@ -1,3 +1,4 @@
 El usuario {{username}} te ha invitado a usar nuestra aplicación.<br>
 Primera plataforma de contacto anónima.<br>
-http://ziip.es/
+
+Para obtener más información, haz click en este enlace http://ziip.es/{{codigo_peticion}}
