--- a/portal/portal/templates/contacto.html
+++ b/portal/portal/templates/contacto.html
@@ -27,17 +27,36 @@
         <input type="hidden" name="csrfmiddlewaretoken" value="{{csrf_token_value}}">
         <div class="form-group">
             <div class="col-xs-12">
-                <div class="input-group">
-                    <span class="input-group-addon"></span>
-                    <input type="text"  name="asunto" class="form-control input-lg" placeholder="Asunto">
-                </div>
+ziip.es tiene como objetivo contactar personas, nuestro esfuerzo es continuo para su buen uso.</br>
+Si tienes cualquier duda o  problema. No dudes en enviarnos un mail a info@ziip.es o rellenar el siguiente formulario:
+</br>
+Para prensa puedes encontrar más información <a href="http://bit.ly/ziipPackPress"> aquí</a>.</br>
+
+
+ziip.es es un proyecto de beyondthebox.sl<br>
+<a href="http://facebook.com/www.ziip.es">Facebook</a><br>
+<a href="http://twitter.com/ziip_es">Twitter</a>
+
+
+
             </div>
         </div>
+
+
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon"></span>
                     <input type="email"  name="email" class="form-control input-lg" placeholder="Email">
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-xs-12">
+                <div class="input-group">
+                    <span class="input-group-addon"></span>
+                    <input type="text"  name="asunto" class="form-control input-lg" placeholder="Asunto">
                 </div>
             </div>
         </div>
