--- a/portal/portal/templates/contacto.html
+++ b/portal/portal/templates/contacto.html
@@ -65,7 +65,7 @@ ziip.es es un proyecto de beyondthebox.sl<br>
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon"></span>
-                    <textarea name="texto" class="input-lg"></textarea>
+                    <textarea name="texto" class="form-control input-lg" rows="4" placeholder="Comentario"></textarea>
                 </div>
             </div>
         </div>
