--- a/portal/portal/templates/footer.html
+++ b/portal/portal/templates/footer.html
@@ -6,6 +6,7 @@
 </div>
 <footer class="clearfix">
     <div class="pull-right">
+        <a href="/contacto">Contacto</a> -
         <a href="/legal" target="_blank">Aviso Legal</a> -
         <a href="/privacidad" target="_blank">Politica de privacidad</a>
     </div>
