--- a/portal/portal/templates/mails/nuevoContacto.html
+++ b/portal/portal/templates/mails/nuevoContacto.html
@@ -1,1 +1,2 @@
-El usuario {{usuario}} es ahora un contacto de Ziip.es
+{% load i18n %}
+{% trans 'El usuario'%} {{usuario}} {% trans 'es ahora un contacto de Ziip.es'%}
