--- a/portal/portal/templates/mails/rechazoPeticion.html
+++ b/portal/portal/templates/mails/rechazoPeticion.html
@@ -1,4 +1,5 @@
-Ziip.es la primera plataforma de contactos completamente anónima<br><br>
+{% load i18n %}
+{% trans 'Ziip.es la primera plataforma de contactos completamente anónima'%}<br><br>
 
 <br><br>
-Para rechazar las peticiones solo tiene que introducir el siguiente codigo: {{codigo_peticion}}
+{% trans 'Para rechazar las peticiones solo tiene que introducir el siguiente codigo:'%}' {{codigo_peticion}}
