--- a/portal/portal/templates/mails/recordar.html
+++ b/portal/portal/templates/mails/recordar.html
@@ -1,1 +1,2 @@
-Su nueva password para ziip es: {{usuario.password}}
+{% load i18n %}
+{% trans 'Su nueva password para ziip es:'%} {{usuario.password}}
