--- a/portal/portal/templates/peticion.html
+++ b/portal/portal/templates/peticion.html
@@ -1,9 +1,10 @@
+{% load i18n %}
 <div class="login-title">
    <div class="logo-tittle">
        <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
-       <h1> <strong>Ziip</strong><br><small> <strong>Mensaje</strong></small></h1>
+       <h1> <strong>Ziip</strong><br><small> <strong>{% trans 'Mensaje'%}</strong></small></h1>
    </div>
 </div>
 <!-- END Login Title -->
@@ -18,7 +19,7 @@
                 <div class="enviado">
 <h1>
     {% ifequal peticion.tipo "2" %}
-        El usuario {{peticion.usuario.usuario}} te ha invitado a conectar.
+        {% trans 'El usuario'%} {{peticion.usuario.usuario}} {% trans 'te ha invitado a conectar.'%}
     {%else%}
         {{peticion.mensaje_anonimo}}
     {% endifequal %}
@@ -30,25 +31,25 @@
             {% ifequal peticion.tipo "2" %}
             {%if logado %}
             <div class="col-xs-12">
-            <a href="aceptarContactoPeticion?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> Aceptar Contacto</a><br>
+            <a href="aceptarContactoPeticion?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> {% trans 'Aceptar Contacto'%}</a><br>
             </div>
             {%else%}
             <div class="col-xs-12">
-            Para aceptar al usuario como contacto debe estar logueado.<br>
-            <a href="login" class="btn btn-sm btn-primary"></i> Login</a></br>
-            <a href="registro" class="btn btn-sm btn-primary"></i> Registro</a>
+            {% trans 'Para aceptar al usuario como contacto debe estar logueado.'%}<br>
+            <a href="login" class="btn btn-sm btn-primary"></i> {% trans 'Login'%}</a></br>
+            <a href="registro" class="btn btn-sm btn-primary"></i> {% trans 'Registro'%}</a>
             </div>
             {% endif %}
             {%else%}
             <div class="col-xs-12">
-                    <a href="peticionPrivado?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> Ver mensaje privado</a><br>
+                    <a href="peticionPrivado?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> {% trans 'Ver mensaje privado'%}</a><br>
             </div>
             {% endifequal %}
             <div class="col-xs-12">
-                    <a href="rechazarContactoPeticion?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> Rechazar Contacto</a><br>
+                    <a href="rechazarContactoPeticion?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> {% trans 'Rechazar Contacto'%}</a><br>
             </div>
             <div class="col-xs-12">
-                    <a href="rechazarZiipPeticion?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> Rechazar todos los mensajes de Ziip</a>
+                    <a href="rechazarZiipPeticion?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> {% trans 'Rechazar todos los mensajes de Ziip'%}</a>
             </div>
 
 
