--- a/portal/portal/templates/ajustes.html
+++ b/portal/portal/templates/ajustes.html
@@ -1,8 +1,9 @@
+{% load i18n %}
 {%if errores %}
 <div class="row">
     <div class="col-sm-12 col-lg-12 site-block">
         <div class="alert alert-warning">
-            Se han encontrado los siguientes errores:
+            {% trans 'Se han encontrado los siguientes errores'%}:
             {%for error in errores %}
                 <br/>{{error}}
             {%endfor%}
@@ -16,7 +17,7 @@
        <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
-       <h1> <strong>Ziip</strong><br><small> <strong>Ajustes</strong></small></h1>
+       <h1> <strong>Ziip</strong><br><small> <strong>{% trans 'Ajustes'%}</strong></small></h1>
    </div>
 </div>
 <!-- END Login Title -->
@@ -32,7 +33,7 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <input type="text" id="telefono" name="telefono" class="form-control input-lg" placeholder="Telefono Movil"  value="{{datos.telefono}}">
+                    <input type="text" id="telefono" name="telefono" class="form-control input-lg" placeholder="{% trans 'Telefono Movil'%}"  value="{{datos.telefono}}">
                 </div>
             </div>
         </div>
@@ -49,7 +50,7 @@
         </div>
         <div class="form-group">
             <div class="col-xs-12 text-right">
-                <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> Guardar</button>
+                <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> {% trans 'Guardar'%}</button>
             </div>
         </div>
 
