--- a/portal/portal/templates/chat.html
+++ b/portal/portal/templates/chat.html
@@ -1,8 +1,9 @@
+{% load i18n %}
 <div class="block">
     <!-- Title -->
     <div class="block-title">
 
-        <h2 id="usuario_seleccionado">Selecciona usuario</h2>
+        <h2 id="usuario_seleccionado">{% trans 'Selecciona usuario'%}</h2>
     </div>
     <!-- END Title -->
 
@@ -24,7 +25,7 @@
             <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 300px;">
                 <div class="chatui-talk-scroll" style="height: 300px; overflow: scroll; width: auto;">
                 <ul id="lista-mensajes">
-                    
+
                 </ul>
             </div>
             <div class="slimScrollBar" style="width: 3px; position: absolute; top: 0px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 550px; background: rgb(0, 0, 0);"></div><div class="slimScrollRail" style="width: 3px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; opacity: 0.2; z-index: 90; right: 1px; background: rgb(51, 51, 51);"></div></div>
