--- a/portal/portal/templates/confirmacionMovil.html
+++ b/portal/portal/templates/confirmacionMovil.html
@@ -1,8 +1,9 @@
+{% load i18n %}
 {%if error_confirmacionMovil %}
 <div class="row">
     <div class="col-sm-12 col-lg-12 site-block">
         <div class="alert alert-warning">
-             Codigo invalido.
+             {% trans 'Codigo invalido.'%}'
         </div>
     </div>
 </div>
@@ -13,7 +14,7 @@
        <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
-       <h1> <strong>Ziip</strong><br><small> <strong>Confirmacion movil</strong></small></h1>
+       <h1> <strong>Ziip</strong><br><small> <strong>{% trans 'Confirmacion movil'%}</strong></small></h1>
    </div>
 </div>
 <!-- END Login Title -->
@@ -29,13 +30,13 @@
             <div class="col-xl-12">
                 <div class="input-group">
 <span class="input-group-addon"></span>
-                    <input type="text"  name="codigo" class="form-control input-lg" placeholder="Codigo">
+                    <input type="text"  name="codigo" class="form-control input-lg" placeholder="{% trans 'Codigo'%}">
                 </div>
             </div>
         </div>
         <div class="form-group">
             <div class="col-xl-12 text-right">
-                <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> Aceptar</button>
+                <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> {% trans 'Aceptar'%}</button>
             </div>
         </div>
 
