--- a/portal/portal/templates/contactos.html
+++ b/portal/portal/templates/contactos.html
@@ -1,10 +1,10 @@
-
+{% load i18n %}
 <div class="login-title">
    <div class="logo-tittle">
        <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
-       <h1> <strong>Ziip</strong><br><small> <strong>Mis contactos</strong></small></h1>
+       <h1> <strong>Ziip</strong><br><small> <strong>{% trans 'Mis contactos'%}</strong></small></h1>
    </div>
 </div>
 <!-- END Login Title -->
