--- a/portal/portal/templates/footer.html
+++ b/portal/portal/templates/footer.html
@@ -1,4 +1,4 @@
-
+{% load i18n %}
 </div>
 <!-- END Login Container -->
 
@@ -6,9 +6,9 @@
 </div>
 <footer class="clearfix">
     <div class="pull-right">
-        <a href="/contacto">Contacto</a> -
-        <a href="/legal" target="_blank">Aviso Legal</a> -
-        <a href="/privacidad" target="_blank">Politica de privacidad</a>
+        <a href="/contacto">{% trans 'Contacto'%}</a> -
+        <a href="/legal" target="_blank">{% trans 'Aviso Legal'%}</a> -
+        <a href="/privacidad" target="_blank">{% trans 'Politica de privacidad'%}</a>
     </div>
    <div class="pull-left">
        <span> 2015 &copy;</span><a href="http://ziip.es/" target="_blank">Ziip.es</a>
