--- a/portal/portal/templates/login.html
+++ b/portal/portal/templates/login.html
@@ -1,8 +1,9 @@
+{% load i18n %}
 {%if error_login %}
 <div class="row">
     <div class="col-sm-12 col-lg-12 site-block">
         <div class="alert alert-warning">
-            Usuario o password invalido.
+            {% trans 'Usuario o password invalido.'%}
         </div>
     </div>
 </div>
@@ -29,7 +30,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="gi gi-user"></i></span>
-                    <input type="text"  name="usuario" class="form-control input-lg" placeholder="Nick">
+                    <input type="text"  name="usuario" class="form-control input-lg" placeholder="{% trans 'Nick'%}">
                 </div>
             </div>
         </div>
@@ -37,7 +38,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="gi gi-asterisk"></i></span>
-                    <input type="password" id="login-password" name="password" class="form-control input-lg" placeholder="Password">
+                    <input type="password" id="login-password" name="password" class="form-control input-lg" placeholder="{% trans 'Password'%}">
                 </div>
             </div>
         </div>
@@ -54,7 +55,7 @@
         </div>
         <div class="form-group">
             <div class="col-xs-12 text-center">
-                <a href="recordarPassword" id="link-reminder-login"><small>Recordar password</small></a>
+                <a href="recordarPassword" id="link-reminder-login"><small>{% trans 'Recordar password'%}</small></a>
             </div>
         </div>
     </form>
