--- a/portal/portal/templates/nuevaPeticion.html
+++ b/portal/portal/templates/nuevaPeticion.html
@@ -1,8 +1,9 @@
+{% load i18n %}
 {%if errores %}
 <div class="row">
     <div class="col-sm-12  col-lg-12 site-block">
         <div class="alert alert-warning">
-            Se han encontrado los siguientes errores:
+            {% trans 'Se han encontrado los siguientes errores'%}:
             {%for error in errores %}
                 <br/>{{error}}
             {%endfor%}
@@ -17,13 +18,13 @@
    </div>
    <div class="txt-tittle">
 {% ifequal tipo "1" %}
-        <h1> <strong>Mensaje anónimo</strong><br><small> <strong>Indicanos a quien quieres enviar el mensaje</strong></small></h1>
+        <h1> <strong>{% trans 'Mensaje anónimo'%}</strong><br><small> <strong>{% trans 'Indicanos a quien quieres enviar el mensaje'%}</strong></small></h1>
 {% endifequal %}
 {% ifequal tipo "2" %}
-<h1> <strong>Conecta</strong><br><small> <strong>Indicanos a quien quieres enviar el mensaje</strong></small></h1>
+<h1> <strong>{% trans 'Conecta'%}</strong><br><small> <strong>{% trans 'Indicanos a quien quieres enviar el mensaje'%}</strong></small></h1>
 {% endifequal %}
 {% ifequal tipo "3" %}
-<h1> <strong>Celestina</strong><br><small> <strong>Indicanos a quien quieres enviar el mensaje</strong></small></h1>
+<h1> <strong>{% trans 'Celestina'%}</strong><br><small> <strong>{% trans 'Indicanos a quien quieres enviar el mensaje'%}</strong></small></h1>
 {% endifequal %}
 
 
@@ -48,11 +49,11 @@
 
                     <select id="example-select2" name="mensaje_anonimo" class="select-select2 form-control input-lg" style="width: 100%;" data-placeholder="Elige mensaje anónimo">
                         <option></option><!-- Required for data-placeholder attribute to work with Select2 plugin -->
-                        <option value="1" {% ifequal datos.mensaje_anonimo "1" %} selected {%endifequal%}>Te conozco desde hace tiempo y quiero conocerte mejor.</option>
-                        <option value="2" {% ifequal datos.mensaje_anonimo "2" %} selected {%endifequal%}>Nos conocemos desde hace poco, pero no puedo olvidarte.</option>
-                        <option value="3" {% ifequal datos.mensaje_anonimo "3" %} selected {%endifequal%}>Trabajamos juntos, tenemos muchas cosas en común, charlemos.</option>
-                        <option value="4" {% ifequal datos.mensaje_anonimo "4" %} selected {%endifequal%}>Nuestras miradas se han encontrado, nuestras palabras también podrían.</option>
-                        <option value="5" {% ifequal datos.mensaje_anonimo "5" %} selected {%endifequal%}>Estudiamos juntos, y desde que te vi no te olvido.</option>
+                        <option value="1" {% ifequal datos.mensaje_anonimo "1" %} selected {%endifequal%}>{% trans 'Te conozco desde hace tiempo y quiero conocerte mejor.'%}</option>
+                        <option value="2" {% ifequal datos.mensaje_anonimo "2" %} selected {%endifequal%}>{% trans 'Nos conocemos desde hace poco, pero no puedo olvidarte.'%}</option>
+                        <option value="3" {% ifequal datos.mensaje_anonimo "3" %} selected {%endifequal%}>{% trans 'Trabajamos juntos, tenemos muchas cosas en común, charlemos.'%}</option>
+                        <option value="4" {% ifequal datos.mensaje_anonimo "4" %} selected {%endifequal%}>{% trans 'Nuestras miradas se han encontrado, nuestras palabras también podrían.'%}</option>
+                        <option value="5" {% ifequal datos.mensaje_anonimo "5" %} selected {%endifequal%}>{% trans 'Estudiamos juntos, y desde que te vi no te olvido.'%}</option>
                     </select>
 
             </div>
@@ -66,10 +67,10 @@
 
                     <select id="example-select2" name="mensaje_anonimo" class="select-select2 form-control input-lg" style="width: 100%;" data-placeholder="Elige mensaje anónimo">
                         <option></option><!-- Required for data-placeholder attribute to work with Select2 plugin -->
-                        <option value="1" {% ifequal datos.mensaje_anonimo "1" %} selected {%endifequal%}>Trabajo con vosotros y creo que deberíais conoceros mejor.</option>
-                        <option value="2" {% ifequal datos.mensaje_anonimo "2" %} selected {%endifequal%}>Os he visto muchas veces, se que haceis buena pareja.</option>
-                        <option value="3" {% ifequal datos.mensaje_anonimo "3" %} selected {%endifequal%}>Nos conocemos los tres y creo que os gustáis.</option>
-                        <option value="4" {% ifequal datos.mensaje_anonimo "4" %} selected {%endifequal%}>Os he visto a ambos en clase, creo que hacéis buena pareja.</option>
+                        <option value="1" {% ifequal datos.mensaje_anonimo "1" %} selected {%endifequal%}>{% trans 'Trabajo con vosotros y creo que deberíais conoceros mejor.'%}</option>
+                        <option value="2" {% ifequal datos.mensaje_anonimo "2" %} selected {%endifequal%}>{% trans 'Os he visto muchas veces, se que haceis buena pareja.'%}</option>
+                        <option value="3" {% ifequal datos.mensaje_anonimo "3" %} selected {%endifequal%}>{% trans 'Nos conocemos los tres y creo que os gustáis.'%}</option>
+                        <option value="4" {% ifequal datos.mensaje_anonimo "4" %} selected {%endifequal%}>{% trans 'Os he visto a ambos en clase, creo que hacéis buena pareja.'%}</option>
                     </select>
 
             </div>
@@ -80,24 +81,43 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <span class="input-group-addon">Nombre:</span>
+                    <span class="input-group-addon">{% trans 'Nombre'%}:</span>
                     <input type="text"  name="nombre" class="form-control input-lg" placeholder="..." value="{{datos.nombre}}">
                 </div>
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-xs-12">
-                <div class="input-group">
-                    <span class="input-group-addon">Telefono:</span>
-                    <input type="text"  name="telefono" class="form-control input-lg" placeholder="...(Solo España)" value="{{datos.telefono}}">
+        <div class="form-group-inline">
+            <div class="row">
+            <div class="col-xs-6">
+                <div class="iput-group">
+                    <span class="input-group-addon">{% trans 'Telefono'%}:</span>
+                    <select name="pais_id"  class="form-control">
+                        <option value="">Selecciona pais</option>
+                        {% for pais in paises %}
+                        <option value="{{pais.id}}" {%ifequal pais.id datos.pais_id%} selected {%endifequal%}>{{pais.pais}}</option>
+                        {% endfor %}
+                    </select>
+
                 </div>
             </div>
+            <div class="col-xs-6">
+                <div class="input-group">
+
+
+                    <input type="text"  name="telefono" class="form-control" placeholder="..." value="{{datos.telefono}}">
+                </div>
+            </div>
+        </div>
+
+
+
+
         </div>
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <span class="input-group-addon">Email:</span>
+                    <span class="input-group-addon">{% trans 'Email'%}:</span>
                     <input type="text"  name="email" class="form-control input-lg" placeholder="..." value="{{datos.email}}">
                 </div>
             </div>
@@ -106,7 +126,7 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <span class="input-group-addon">Nombre segundo contacto:</span>
+                    <span class="input-group-addon">{% trans 'Nombre segundo contacto'%}:</span>
                     <input type="text"  name="nombre2" class="form-control input-lg" placeholder="..." value="{{datos.nombre2}}">
                 </div>
             </div>
@@ -115,7 +135,7 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <span class="input-group-addon">Telefono:</span>
+                    <span class="input-group-addon">{% trans 'Telefono'%}:</span>
                     <input type="text"  name="telefono2" class="form-control input-lg" placeholder="...(Solo España)" value="{{datos.telefono2}}">
                 </div>
             </div>
@@ -123,7 +143,7 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <span class="input-group-addon">Email:</span>
+                    <span class="input-group-addon">{% trans 'Email'%}:</span>
                     <input type="text"  name="email2" class="form-control input-lg" placeholder="..." value="{{datos.email2}}">
                 </div>
             </div>
@@ -134,7 +154,7 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <span class="input-group-addon">Mensaje:</span>
+                    <span class="input-group-addon">{% trans 'Mensaje'%}:</span>
                     <textarea name="mensaje" class="form-control input-lg" placeholder="...">{{datos.mensaje}}</textarea>
                 </div>
             </div>
@@ -142,7 +162,7 @@
         {%endifnotequal%}
         <div class="form-group form-actions">
             <div class="col-xs-12 text-right">
-                <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-arrow-right"></i> Enviar</button>
+                <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-arrow-right"></i> {% trans 'Enviar'%}</button>
             </div>
         </div>
 
