--- a/portal/portal/templates/peticionEnviada.html
+++ b/portal/portal/templates/peticionEnviada.html
@@ -1,9 +1,10 @@
+{% load i18n %}
 <div class="login-title">
    <div class="logo-tittle">
        <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
-       <h1> <strong>Ziip</strong><br><small> <strong>Peticion enviada correctamente</strong></small></h1>
+       <h1> <strong>Ziip</strong><br><small> <strong>{% trans 'Peticion enviada correctamente'%}</strong></small></h1>
    </div>
 </div>
 <!-- END Login Title -->
@@ -14,7 +15,7 @@
 
 
     <div class="enviado">
-           <h1>Petición enviada correctamente</h1>
+           <h1>{% trans 'Petición enviada correctamente'%}</h1>
        </div>
 
 </div>
