--- a/portal/portal/templates/rechazoAceptado.html
+++ b/portal/portal/templates/rechazoAceptado.html
@@ -1,10 +1,10 @@
-
+{% load i18n %}
 <div class="login-title">
    <div class="logo-tittle">
        <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
-       <h1> <strong>Ziip</strong><br><small> <strong>Peticion de rechazo aceptada</strong></small></h1>
+       <h1> <strong>Ziip</strong><br><small> <strong>{% trans 'Peticion de rechazo aceptada'%}</strong></small></h1>
    </div>
 </div>
 <!-- END Login Title -->
@@ -15,7 +15,7 @@
 
     <!-- Login Form -->
     <div class="enviado">
-           <h1>Petición rechazada correctamente</h1>
+           <h1>{% trans 'Petición rechazada correctamente'%}</h1>
        </div>
 
 </div>
