--- a/portal/portal/templates/rechazoEnviado.html
+++ b/portal/portal/templates/rechazoEnviado.html
@@ -1,8 +1,9 @@
+{% load i18n %}
 {%if mensajeRechazo %}
 <div class="row">
     <div class="col-sm-12 col-lg-12 site-block">
         <div class="alert alert-warning">
-            Codigo invalido.
+            {% trans 'Codigo invalido.'%}
         </div>
     </div>
 </div>
@@ -13,7 +14,7 @@
        <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
-       <h1> <strong>Ziip</strong><br><small> <strong>Codigo</strong></small></h1>
+       <h1> <strong>Ziip</strong><br><small> <strong>{% trans 'Codigo'%}</strong></small></h1>
    </div>
 </div>
 <!-- END Login Title -->
@@ -31,7 +32,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon"></span>
-                    <input type="text" id="codigo" name="codigo" class="form-control input-lg" placeholder="Codigo">
+                    <input type="text" id="codigo" name="codigo" class="form-control input-lg" placeholder="{% trans 'Codigo'%}">
                 </div>
             </div>
         </div>
@@ -39,7 +40,7 @@
         <div class="form-group form-actions">
 
             <div class="col-xs-12 text-right">
-                <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> Aceptar</button>
+                <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> {% trans 'Aceptar'%}</button>
             </div>
         </div>
 
