--- a/portal/portal/templates/recientes.html
+++ b/portal/portal/templates/recientes.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% load imagenTipo %}
 
 
@@ -6,7 +7,7 @@
        <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
-       <h1> <strong>Ziip</strong><br><small> <strong>Recientes</strong></small></h1>
+       <h1> <strong>Ziip</strong><br><small> <strong>{% trans 'Recientes'%}</strong></small></h1>
    </div>
 </div>
 <!-- END Login Title -->
