--- a/portal/portal/templates/recordarPassword.html
+++ b/portal/portal/templates/recordarPassword.html
@@ -1,8 +1,9 @@
+{% load i18n %}
 {%if error_login %}
 <div class="row">
     <div class="col-sm-12 col-lg-12 site-block">
         <div class="alert alert-warning">
-            Usuario o password invalido.
+            {% trans 'Usuario o password invalido.'%}
         </div>
     </div>
 </div>
@@ -13,7 +14,7 @@
        <img src="/img/icon57.png">
    </div>
    <div class="txt-tittle">
-       <h1> <strong>Ziip</strong><br><small> <strong>Recordar Password</strong></small></h1>
+       <h1> <strong>Ziip</strong><br><small> <strong>{% trans 'Recordar Password'%}</strong></small></h1>
    </div>
 </div>
 <!-- END Login Title -->
@@ -29,7 +30,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="gi gi-envelope"></i></span>
-                    <input type="text"  name="email" class="form-control input-lg" placeholder="Email">
+                    <input type="text"  name="email" class="form-control input-lg" placeholder="{% trans 'Email'%}">
                 </div>
             </div>
         </div>
@@ -39,7 +40,7 @@
 
             </div>
             <div class="col-xs-8 text-right">
-                <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> Recordar</button>
+                <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> {% trans 'Recordar'%}</button>
             </div>
         </div>
     </form>
