--- a/portal/portal/templates/registro.html
+++ b/portal/portal/templates/registro.html
@@ -1,8 +1,9 @@
+{% load i18n %}
 {%if errores %}
 <div class="row">
     <div class="col-sm-12 col-lg-12 site-block">
         <div class="alert alert-warning">
-            Se han encontrado los siguientes errores:
+            {% trans 'Se han encontrado los siguientes errores'%}:
             {%for error in errores %}
                 <br/>{{error}}
             {%endfor%}
@@ -17,7 +18,7 @@
        <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
-       <h1> <strong>Ziip</strong><br><small> <strong>Registro</strong></small></h1>
+       <h1> <strong>Ziip</strong><br><small> <strong>{% trans 'Registro'%}</strong></small></h1>
    </div>
 </div>
 <!-- END Login Title -->
@@ -34,7 +35,23 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="gi gi-user"></i></span>
-                    <input type="text" id="email" name="username" class="form-control input-lg" placeholder="Nick" value="{{datos.username}}">
+                    <input type="text" id="email" name="username" class="form-control input-lg" placeholder="{% trans 'Nick'%}" value="{{datos.username}}">
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-xs-12">
+                <div class="input-group">
+                    <span class="input-group-addon"></span>
+                    <select name="pais_id"  class="form-control input-lg">
+                        <option value="">Selecciona pais</option>
+                        {% for pais in paises %}
+                        <option value="{{pais.id}}" {%ifequal pais.id datos.pais_id%} selected {%endifequal%}>{{pais.pais}}</option>
+                        {% endfor %}
+                    </select>
+
+
+
                 </div>
             </div>
         </div>
@@ -42,7 +59,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="gi gi-envelope"></i></span>
-                    <input type="email" id="email" name="email" class="form-control input-lg" placeholder="Email"  value="{{datos.email}}">
+                    <input type="email" id="email" name="email" class="form-control input-lg" placeholder="{% trans 'Email'%}"  value="{{datos.email}}">
                 </div>
             </div>
         </div>
@@ -50,7 +67,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="gi gi-asterisk"></i></span>
-                    <input type="password" id="password" name="password" class="form-control input-lg" placeholder="Contaseña">
+                    <input type="password" id="password" name="password" class="form-control input-lg" placeholder="{% trans 'Contaseña'%}">
                 </div>
             </div>
         </div>
@@ -58,7 +75,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="gi gi-asterisk"></i></span>
-                    <input type="password" id="password2" name="password2" class="form-control input-lg" placeholder="Verifica Contraseña">
+                    <input type="password" id="password2" name="password2" class="form-control input-lg" placeholder="{% trans 'Verifica Contraseña'%}">
                 </div>
             </div>
         </div>
@@ -75,15 +92,15 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group sexo-css">
-                    <label>Sexo: </label>
+                    <label>{% trans 'Sexo:'%} </label>
                     <label class="radio-inline" for="checkout-payment-paypal">
-                        <input type="radio" id="sexo" name="sexo" value="1" {%ifequal datos.sexo "1" %}cheked {% endifequal %} >Hombre
+                        <input type="radio" id="sexo" name="sexo" value="1" {%ifequal datos.sexo "1" %}cheked {% endifequal %} >{% trans 'Hombre'%}
                     </label>
                     <label class="radio-inline" for="sexo">
-                        <input type="radio" id="sexo" name="sexo" value="2" {%ifequal datos.sexo "2" %}cheked {% endifequal %} > Mujer
+                        <input type="radio" id="sexo" name="sexo" value="2" {%ifequal datos.sexo "2" %}cheked {% endifequal %} > {% trans 'Mujer'%}
                     </label>
                     <label class="radio-inline" for="sexo">
-                        <input type="radio" id="sexo" name="sexo" value="3" {%ifequal datos.sexo "3" %}cheked {% endifequal %} > Indefinido
+                        <input type="radio" id="sexo" name="sexo" value="3" {%ifequal datos.sexo "3" %}cheked {% endifequal %} > {% trans 'Indefinido'%}
                     </label>
                 </div>
             </div>
@@ -91,13 +108,13 @@
 
         <div class="form-group form-actions">
             <div class="col-xs-6">
-                <label class="switch switch-primary" data-toggle="tooltip" title="Acepto los terminos">
+                <label class="switch switch-primary" data-toggle="tooltip" title="{% trans 'Acepto los terminos'%}">
                     <input type="checkbox" id="register-terms" name="condiciones" value="1"><span></span>
                 </label>
-                <a href="/legal" data-toggle="modal" class="register-terms" target="_blank"><small>Ver terminos</small></a>
+                <a href="/legal" data-toggle="modal" class="register-terms" target="_blank"><small>{% trans 'Ver terminos'%}</small></a>
             </div>
             <div class="col-xs-6 text-right">
-                <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> Enviar</button>
+                <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> {% trans 'Enviar'%}</button>
             </div>
         </div>
 
