--- a/portal/portal/templates/respuestaConfirmacionMovil.html
+++ b/portal/portal/templates/respuestaConfirmacionMovil.html
@@ -1,10 +1,10 @@
-
+{% load i18n %}
 <div class="login-title">
    <div class="logo-tittle">
        <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
-       <h1> <strong>Ziip</strong><br><small> <strong>Movil correctamente confirmado.</strong></small></h1>
+       <h1> <strong>Ziip</strong><br><small> <strong>{% trans 'Movil correctamente confirmado.'%}</strong></small></h1>
    </div>
 </div>
 <!-- END Login Title -->
@@ -19,7 +19,7 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                     <h1>Movil correctamente confirmado.</h1>
+                     <h1>{% trans 'Movil correctamente confirmado.'%}</h1>
 
                 </div>
             </div>
