--- a/portal/portal/templates/ziip.html
+++ b/portal/portal/templates/ziip.html
@@ -1,11 +1,11 @@
-
+{% load i18n %}
 {% load imagenTipo %}
 <div class="login-title">
    <div class="logo-tittle">
        <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
-       <h1> <strong>Ziip</strong><br><small> <strong>Enviar Mensaje</strong></small></h1>
+       <h1> <strong>Ziip</strong><br><small> <strong>{% trans 'Enviar Mensaje'%}</strong></small></h1>
    </div>
 </div>
 <!-- END Login Title -->
@@ -21,7 +21,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon"><a href="/anonimo" >{{"1"|imagenTipo|safe}}</a></span>
-                    <a href="/anonimo">Mensaje Anonimo</a>
+                    <a href="/anonimo">{% trans 'Mensaje Anonimo'%}</a>
                 </div>
             </div>
         </div>
@@ -30,7 +30,7 @@
                 <div class="input-group">
                     <span class="input-group-addon">
                     <a href="/conecta" >{{"2"|imagenTipo|safe}}</a></span>
-                    <a href="/conecta"> Conecta</a>
+                    <a href="/conecta"> {% trans 'Conecta'%}</a>
                 </div>
             </div>
         </div>
@@ -39,7 +39,7 @@
                 <div class="input-group">
                     <span class="input-group-addon"><a href="/celestina" >{{"3"|imagenTipo|safe}}</a></span>
 
-                    <a href="/celestino"> Celestina</a>
+                    <a href="/celestino"> {% trans 'Celestina'%}</a>
                 </div>
             </div>
         </div>
